<resources>
    <string name="app_name">vEsperanto 10</string>
    <string name="menu_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="ActionButton">Press and talk to obtain interpretation; Long press to continuously translate speech</string>
    <string name="VideoViewAccessibility">VideoView is displaying your speech translated into videos. LongPress to obtain Video or View  options</string>
    <string name="ImageViewAccessibility">ImageView is displaying your speech translated into images. LongPress to obtain image or View  options</string>
    <string name="ScrollViewAccessibility">This scrollable view displays all others views.Longpress on inside views to interact</string>
    <string name="SearchViewAccessibility">"Horizontal scrollable SearchView displays your speech interpreted as image. Longpress inside to interact"</string>
    <string name="SWspellViewAccessibility">"Horizontal scrollable SpellView displays your speech letters interpreted as images.Default is SignWrittingSpell"</string>
     <string name="SecurityViewAccessibility">"Horizontal scrollable Security View displays your speech interpreted as images"</string>
     <string name="InstallGoogleVoiceSearchMessage">For recognition it’s necessary to install Google Voice Search</string>
      <string name="InstallGoogleVoiceSearchTitle">Install Voice Search from Google Play next time you are online?</string>
      <string name="InstallLater">Install Later</string>
     <string name="Cancel">Cancel</string>
    <string name="SelectFileToProcess">"Select a file to process"</string>
     <string name="InstallFileManager">"Please install a File Manager."</string>
    <string name="Delete">"Delete:"</string>
    <string name="ClickOnImage">"clickOn image"</string>
    <string name="ClickOnView">"clickOn view"</string>
    <string name="GetPhoto">"GetPhoto"</string>
     <string name="vEsperantoByAteraction">vEsperanto by Ateraction</string>
    <string name="VideoLoading">"Ateraction: Loading . .. ...."</string>
   <string name="SelectViews">SelectViews</string>
	   <string name="VideoOn">Video On</string>
	   <string name="VideoOff">Video Off</string>
	   <string name="SWspellOn">SWspell On</string>
	   <string name="SWspellOff">SWspell Off</string>
	   <string name="SecurityViewOn">SecurityView On</string>
	    <string name="SecurityViewOff">SecurityView Off</string>
	   <string name="GoogleViewOn">SearchView On</string>
	   <string name="GoogleViewOff">SearchView OFF</string>
   <string name="Reload">Reload</string>
   <string name="languages">languages</string>
   <string name="AdvancedOptions">AdvancedOptions</string>
   	  <string name="Validation">Validation</string>
      <string name="Debug">Debug</string>
      <string name="SendReport">SendReport</string>
      <string name="CommandMode">ModeCommande</string>
        <string name="ProcessMenu">ProcessMenu</string>
      <string name="HideMenu">HideMenu</string>
      <string name="IsMenuRequest">"IsMenuRequest"</string>
   <string name="Exchange">Exchange</string>
   	<string name="getLastpack">getLastpack</string>
   	<string name="getLastWordList">getLastWordList</string>
   	<string name="getLastSpellList">getLastSpellList</string>
   	<string name="getLastImageList">getLastImageList</string>
   	<string name="getLastVideoList">getLastVideoList</string>
   	<string name="loadList">loadList</string>
   	<string name="LoadImageList">getLastWordList</string>
   	<string name="LoadVideoList">LoadVideoList</string>
   	<string name="SendWordList">SendWordList</string>
   	<string name="SendVideoList">SendVideoList</string>
   	<string name="SendImageList">SendImageList</string>
   	<string name="SendImages">SendImages</string>
   	<string name="sendVideos">sendVideos</string>
  	<string name="MediasOptions">Medias Options</string>
   	<string name="Validate">Validate</string>
   	<string name="ViewOptions">ViewOptions</string>
   	<string name="Change">Change</string>
    <string name="Photo">Photo</string>
     <string name="Hide">Hide</string>
     <string name="ReloadImage">ReloadImage</string>
     <string name="DeleteImage">DeleteImage</string>
     <string name="ChangeVideo">ChangeVideo</string>
     <string name="MakeVideo">MakeVideo</string>
      	<string name="ValidateVideo">ValidateVideo</string>
     <string name="ReloadVideo">ReloadVideo</string>
   <string name="HideVideo">HideVideo</string>
   <string name="DeleteVideo">DeleteVideo</string>
  <string name="SearchResults">SearchResults</string>
  <string name="SearchWeb">SearchWeb</string>
  	<string name="NormalSize">NormalSize</string>
     <string name="FullSize">FullSize</string>
   <string name="MicroSize">MicroSize</string>
   <string name="Help_About">Help_About</string>
   <string name="Help">Help</string>
   <string name="About">About</string>
   <string name="SafeSearch">SafeSearch</string>
    <string name="ReadSMS">ReadSMS</string>
    <string name="ReadLast_SMS">ReadLast_SMS</string>
    <string name="SendSMS">SendSMS</string>
    <string name="SendMail">SendMail</string>
   <string name="SayWords"> play together to say the words  </string>
   <string name="SayWords2"> It is started </string>
   <string name="FindTheGoodPicture"> Find the good picture </string>
   <string name="YourTurnToSpeak"> Your turn to say </string>
   <string name="ImBeginning"> I am beginning   </string>
   <string name="TheWordIs"> The word is   </string>
      <string name="Touch"> Touch   </string>
   <string name="YesItWas"> Yes it was   </string>
   <string name="PerfectYouHaveSaid">Perfect You have said </string>
   <string name="Congratulations"> Congratulations   </string>
   <string name="TryTheWord"> Try the word  </string>
   <string name="LearningMode">Learning</string>
   <string name="ValidationMode">ValidationMode</string>
</resources>