<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

      

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <ToggleButton
                android:id="@+id/VideoViewTogglebutton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onVideoToggleClicked"
                android:textOff="@string/VideoOff"
                android:textOn="@string/VideoOn"/>
        
             <ToggleButton
                 android:id="@+id/SWSpellViewTogglebutton"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:onClick="onSWSpellToggleClicked"
                 android:textOff="@string/SWspellOff"  
                 android:textOn="@string/SWspellOn" />
            <!--"SW Spell off"  replaced by SWspellOff
            "@string/hello_world"
             
            This may also be a reference
             to a resource 
             (in the form "@[package:]type:name")
              or theme attribute 
              (in the form "?[package:][type:]name")
               containing a value of this type.
			This corresponds to the global attribute resource symbol textOff. 
			
			@[+][package:]type:name"
			-->
             
             
                <ToggleButton
                    android:id="@+id/SecurityViewTogglebutton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="onSecurityToggleClicked"
                    android:textOff="@string/SecurityViewOff"
                    android:textOn="@string/SecurityViewOn" />
                
             <ToggleButton
                 android:id="@+id/GoogleViewTogglebutton"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:onClick="onGoogleToggleClicked"
                 android:textOff="@string/GoogleViewOff"
                 android:textOn="@string/GoogleViewOn"/>
 
    <!-- <TextView
                android:id="@+id/options_lang"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autoLink="web"
                android:paddingTop="20dip"
                android:text="@string/app_credits"
                android:textColor="#ff0000"
                android:textSize="16sp" 
           />
    -->
        </LinearLayout>
     
        
        
        
    </ScrollView>

</LinearLayout>
